--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=Search-Service
-server.port=8084
+server.port=8087
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
